# Blog_Application_Django

./: .gitignore  db.sqlite3  pyproject.toml
blog/: admin.py  models.py  views.py
blog/templates/blog/: base.html
blog/templates/blog/post/: list.html
mysite/: settings.py  urls.py
